src/compiler/antlr4/DXXParser.cpp

// Generated from templates/DXXParser.g4 by ANTLR 4.13.1


#include "DXXParserListener.h"
#include "DXXParserVisitor.h"

#include "DXXParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct DXXParserStaticData final {
  DXXParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DXXParserStaticData(const DXXParserStaticData&) = delete;
  DXXParserStaticData(DXXParserStaticData&&) = delete;
  DXXParserStaticData& operator=(const DXXParserStaticData&) = delete;
  DXXParserStaticData& operator=(DXXParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag dxxparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
DXXParserStaticData *dxxparserParserStaticData = nullptr;

void dxxparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (dxxparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(dxxparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DXXParserStaticData>(
    std::vector<std::string>{
      "stat", "gExpressions", "expressions", "constant", "data", "boolean", 
      "negative", "semi", "importLib", "new", "delete", "typedef", "functionDefine", 
      "function", "return", "lambdaFunction", "functionHead", "functionCall", 
      "paramList", "callParamList", "throwtable", "varDefine", "varDefineNoSet", 
      "varSet", "withStatement", "withIf", "withIfExtends", "withIfExtendsSub", 
      "withSwitchStatement", "caseStatement", "defaultStatement", "whileLoop", 
      "doWhileLoop", "foreachLoop", "goto", "gotoLabelDefine", "enum", "enumSub", 
      "class", "interface", "classMethods", "interfaceMethods", "operatorDefine", 
      "block", "try", "throw", "theType", "theTypeSub", "idEx", "info", 
      "native", "assigns", "allOperators"
    },
    std::vector<std::string>{
      "", "'asm'", "'bool'", "'break'", "'case'", "'catch'", "'char'", "'class'", 
      "'compiletime'", "'continue'", "'default'", "'delete'", "'do'", "'enum'", 
      "'extends'", "'false'", "'final'", "'finally'", "'float'", "'foreach'", 
      "'goto'", "'if'", "'import'", "'inline'", "'int'", "'implements'", 
      "'interface'", "'long'", "'native'", "'new'", "'null'", "'object'", 
      "'operator'", "'override'", "'private'", "'protected'", "'public'", 
      "'return'", "'short'", "'static'", "'string'", "'super'", "'switch'", 
      "'template'", "'this'", "'throw'", "'true'", "'try'", "'type'", "'using'", 
      "'virtual'", "'void'", "'while'", "'with'", "'('", "')'", "'['", "']'", 
      "'{'", "'}'", "'=>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'&'", 
      "'|'", "'~'", "", "'='", "':='", "'<'", "'>'", "'+='", "'-='", "'*='", 
      "'/='", "'%='", "'^='", "'&='", "'|='", "'<<='", "'>>='", "'=='", 
      "'!='", "'<='", "'>='", "", "", "'++'", "'--'", "','", "':'", "';'", 
      "'.'", "'...'", "'<<'", "'>>'", "", "'__constructor__'", "'__destructor__'"
    },
    std::vector<std::string>{
      "", "Asm", "Bool", "Break", "Case", "Catch", "Char", "Class", "Compiletime", 
      "Continue", "Default", "Delete", "Do", "Enum", "Extends", "False", 
      "Final", "Finally", "Float", "Foreach", "Goto", "If", "Import", "Inline", 
      "Int", "Implements", "Interface", "Long", "Native", "New", "Null", 
      "Object", "Operator", "Override", "Private", "Protected", "Public", 
      "Return", "Short", "Static", "String", "Super", "Switch", "Template", 
      "This", "Throw", "True", "Try", "Type", "Using", "Virtual", "Void", 
      "While", "With", "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
      "LeftBrace", "RightBrace", "Arrow", "Plus", "Minus", "Star", "Div", 
      "Mod", "Caret", "And", "Or", "Tilde", "Not", "Assign", "ColonAssign", 
      "Less", "Greater", "PlusAssign", "MinusAssign", "StarAssign", "DivAssign", 
      "ModAssign", "XorAssign", "AndAssign", "OrAssign", "LeftShiftAssign", 
      "RightShiftAssign", "Equal", "NotEqual", "LessEqual", "GreaterEqual", 
      "AndAnd", "OrOr", "PlusPlus", "MinusMinus", "Comma", "Colon", "Semi", 
      "Dot", "Ellipsis", "LeftShift", "RightShift", "ID", "Constructor", 
      "Destructor", "Whitespace", "Newline", "BlockComment", "LineComment", 
      "IntegerData", "FloatingNumberData", "StringData"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  dxxparserParserStaticData = staticData.release();
}

}

DXXParser::DXXParser(TokenStream *input) : DXXParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

DXXParser::DXXParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  DXXParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *dxxparserParserStaticData->atn, dxxparserParserStaticData->decisionToDFA, dxxparserParserStaticData->sharedContextCache, options);
}

DXXParser::~DXXParser() {
  delete _interpreter;
}

const atn::ATN& DXXParser::getATN() const {
  return *dxxparserParserStaticData->atn;
}

std::string DXXParser::getGrammarFileName() const {
  return "DXXParser.g4";
}

const std::vector<std::string>& DXXParser::getRuleNames() const {
  return dxxparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& DXXParser::getVocabulary() const {
  return dxxparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView DXXParser::getSerializedATN() const {
  return dxxparserParserStaticData->serializedATN;
}


//----------------- StatContext ------------------------------------------------------------------

DXXParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DXXParser::StatContext::EOF() {
  return getToken(DXXParser::EOF, 0);
}

std::vector<DXXParser::GExpressionsContext *> DXXParser::StatContext::gExpressions() {
  return getRuleContexts<DXXParser::GExpressionsContext>();
}

DXXParser::GExpressionsContext* DXXParser::StatContext::gExpressions(size_t i) {
  return getRuleContext<DXXParser::GExpressionsContext>(i);
}


size_t DXXParser::StatContext::getRuleIndex() const {
  return DXXParser::RuleStat;
}

void DXXParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void DXXParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}


std::any DXXParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

DXXParser::StatContext* DXXParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 0, DXXParser::RuleStat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2535055419572612) != 0) || ((((_la - 95) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 95)) & 225) != 0)) {
      setState(106);
      gExpressions();
      setState(111);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(112);
    match(DXXParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GExpressionsContext ------------------------------------------------------------------

DXXParser::GExpressionsContext::GExpressionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t DXXParser::GExpressionsContext::getRuleIndex() const {
  return DXXParser::RuleGExpressions;
}

void DXXParser::GExpressionsContext::copyFrom(GExpressionsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- GSemiExprContext ------------------------------------------------------------------

DXXParser::SemiContext* DXXParser::GSemiExprContext::semi() {
  return getRuleContext<DXXParser::SemiContext>(0);
}

DXXParser::GSemiExprContext::GSemiExprContext(GExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::GSemiExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGSemiExpr(this);
}
void DXXParser::GSemiExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGSemiExpr(this);
}

std::any DXXParser::GSemiExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitGSemiExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- InterfaceExprContext ------------------------------------------------------------------

DXXParser::InterfaceContext* DXXParser::InterfaceExprContext::interface() {
  return getRuleContext<DXXParser::InterfaceContext>(0);
}

DXXParser::InterfaceExprContext::InterfaceExprContext(GExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::InterfaceExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInterfaceExpr(this);
}
void DXXParser::InterfaceExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInterfaceExpr(this);
}

std::any DXXParser::InterfaceExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitInterfaceExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionDefineExprContext ------------------------------------------------------------------

DXXParser::FunctionDefineContext* DXXParser::FunctionDefineExprContext::functionDefine() {
  return getRuleContext<DXXParser::FunctionDefineContext>(0);
}

DXXParser::FunctionDefineExprContext::FunctionDefineExprContext(GExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::FunctionDefineExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDefineExpr(this);
}
void DXXParser::FunctionDefineExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDefineExpr(this);
}

std::any DXXParser::FunctionDefineExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitFunctionDefineExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ClassExprContext ------------------------------------------------------------------

DXXParser::ClassContext* DXXParser::ClassExprContext::class_() {
  return getRuleContext<DXXParser::ClassContext>(0);
}

DXXParser::ClassExprContext::ClassExprContext(GExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::ClassExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassExpr(this);
}
void DXXParser::ClassExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassExpr(this);
}

std::any DXXParser::ClassExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitClassExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ImportExprContext ------------------------------------------------------------------

DXXParser::ImportLibContext* DXXParser::ImportExprContext::importLib() {
  return getRuleContext<DXXParser::ImportLibContext>(0);
}

DXXParser::ImportExprContext::ImportExprContext(GExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::ImportExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportExpr(this);
}
void DXXParser::ImportExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportExpr(this);
}

std::any DXXParser::ImportExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitImportExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarDefineExprContext ------------------------------------------------------------------

DXXParser::VarDefineContext* DXXParser::VarDefineExprContext::varDefine() {
  return getRuleContext<DXXParser::VarDefineContext>(0);
}

DXXParser::VarDefineExprContext::VarDefineExprContext(GExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::VarDefineExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDefineExpr(this);
}
void DXXParser::VarDefineExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDefineExpr(this);
}

std::any DXXParser::VarDefineExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitVarDefineExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionExprContext ------------------------------------------------------------------

DXXParser::FunctionContext* DXXParser::FunctionExprContext::function() {
  return getRuleContext<DXXParser::FunctionContext>(0);
}

DXXParser::FunctionExprContext::FunctionExprContext(GExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::FunctionExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionExpr(this);
}
void DXXParser::FunctionExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionExpr(this);
}

std::any DXXParser::FunctionExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitFunctionExpr(this);
  else
    return visitor->visitChildren(this);
}
DXXParser::GExpressionsContext* DXXParser::gExpressions() {
  GExpressionsContext *_localctx = _tracker.createInstance<GExpressionsContext>(_ctx, getState());
  enterRule(_localctx, 2, DXXParser::RuleGExpressions);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(121);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<DXXParser::ImportExprContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(114);
      importLib();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<DXXParser::FunctionExprContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(115);
      function();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<DXXParser::FunctionDefineExprContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(116);
      functionDefine();
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<DXXParser::VarDefineExprContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(117);
      varDefine();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<DXXParser::ClassExprContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(118);
      class_();
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<DXXParser::InterfaceExprContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(119);
      interface();
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<DXXParser::GSemiExprContext>(_localctx);
      enterOuterAlt(_localctx, 7);
      setState(120);
      semi();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionsContext ------------------------------------------------------------------

DXXParser::ExpressionsContext::ExpressionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t DXXParser::ExpressionsContext::getRuleIndex() const {
  return DXXParser::RuleExpressions;
}

void DXXParser::ExpressionsContext::copyFrom(ExpressionsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- NewExprContext ------------------------------------------------------------------

DXXParser::NewContext* DXXParser::NewExprContext::new_() {
  return getRuleContext<DXXParser::NewContext>(0);
}

DXXParser::NewExprContext::NewExprContext(ExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::NewExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNewExpr(this);
}
void DXXParser::NewExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNewExpr(this);
}

std::any DXXParser::NewExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitNewExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarSetExprContext ------------------------------------------------------------------

DXXParser::VarSetContext* DXXParser::VarSetExprContext::varSet() {
  return getRuleContext<DXXParser::VarSetContext>(0);
}

DXXParser::VarSetExprContext::VarSetExprContext(ExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::VarSetExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarSetExpr(this);
}
void DXXParser::VarSetExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarSetExpr(this);
}

std::any DXXParser::VarSetExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitVarSetExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ForeachLoopExprContext ------------------------------------------------------------------

DXXParser::ForeachLoopContext* DXXParser::ForeachLoopExprContext::foreachLoop() {
  return getRuleContext<DXXParser::ForeachLoopContext>(0);
}

DXXParser::ForeachLoopExprContext::ForeachLoopExprContext(ExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::ForeachLoopExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForeachLoopExpr(this);
}
void DXXParser::ForeachLoopExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForeachLoopExpr(this);
}

std::any DXXParser::ForeachLoopExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitForeachLoopExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ThrowExprContext ------------------------------------------------------------------

DXXParser::ThrowContext* DXXParser::ThrowExprContext::throw_() {
  return getRuleContext<DXXParser::ThrowContext>(0);
}

DXXParser::ThrowExprContext::ThrowExprContext(ExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::ThrowExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterThrowExpr(this);
}
void DXXParser::ThrowExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitThrowExpr(this);
}

std::any DXXParser::ThrowExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitThrowExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypedefExprTagContext ------------------------------------------------------------------

DXXParser::TypedefContext* DXXParser::TypedefExprTagContext::typedef_() {
  return getRuleContext<DXXParser::TypedefContext>(0);
}

DXXParser::TypedefExprTagContext::TypedefExprTagContext(ExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::TypedefExprTagContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypedefExprTag(this);
}
void DXXParser::TypedefExprTagContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypedefExprTag(this);
}

std::any DXXParser::TypedefExprTagContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitTypedefExprTag(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DoWhileLoopExprContext ------------------------------------------------------------------

DXXParser::DoWhileLoopContext* DXXParser::DoWhileLoopExprContext::doWhileLoop() {
  return getRuleContext<DXXParser::DoWhileLoopContext>(0);
}

DXXParser::DoWhileLoopExprContext::DoWhileLoopExprContext(ExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::DoWhileLoopExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDoWhileLoopExpr(this);
}
void DXXParser::DoWhileLoopExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDoWhileLoopExpr(this);
}

std::any DXXParser::DoWhileLoopExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DXXParserVisitor*>(visitor))
    return parserVisitor->visitDoWhileLoopExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- GotoExprContext ------------------------------------------------------------------

DXXParser::GotoContext* DXXParser::GotoExprContext::goto_() {
  return getRuleContext<DXXParser::GotoContext>(0);
}

DXXParser::GotoExprContext::GotoExprContext(ExpressionsContext *ctx) { copyFrom(ctx); }

void DXXParser::GotoExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGotoExpr(this);
}
void DXXParser::GotoExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DXXParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGotoExpr(this);
}
